Compiles with NVCC, with bugs

--- a/code/Makefile
+++ b/code/Makefile
@@ -21,7 +21,7 @@ LIBS       :=
 FRAMEWORKS :=
 
 NVCCFLAGS=-O3 -m64 -std=c++11 --gpu-architecture compute_35
-LIBS += GL glut cudart
+LIBS += cudart
 
 ifneq ($(wildcard /opt/cuda-8.0/.*),)
 # Latedays
