just testing a bit, looks like omp has way too large overhead too

--- a/code/Makefile
+++ b/code/Makefile
@@ -5,7 +5,7 @@ EXEC=$(EXECPAR)
 EXECPAR=ngram-par
 EXECSEQ=ngram-seq
 CXX=g++ -m64
-CXXFLAGS=-Wall -O3 -std=c++11 -D PERF
+CXXFLAGS=-Wall -O3 -std=c++11 -D PERF -fopenmp
 DBGFLAGS= -D DEBUG  -g
 NVCC=nvcc -m64
 NVCCFLAGS=-O3 -std=c++11 -D PERF --gpu-architecture compute_61 --gpu-code sm_61
